Walk the original a second time, and rebuild the seventy-one behaviours it had missed
The first module-by-module walk over permitio/opal produced 75 rows and 114 rules, and
every check in the harness went green afterwards: 264 tests, spec_check, test_census,
rule_coverage, gui_audit, bench_probes, a hand-walked review pass, a surface census
reporting 234 of 234, and a benchmark reporting 235 of 235 rows agree.

A second walk over the same four package trees found 203 more rows. Seventy-one were
behaviours this rebuild did not have — the reason a purge carries and which way a failed
sibling check falls, the order the client starts in and what ends its process, a scope
deleted while its clone was queued, the username a token is presented with, the two engine
output streams read independently, and about forty log lines the original writes. Eight
were misreadings, each re-checked against the source before it was dropped. Five are
behaviours this target does not have and are listed in the README as decisions.

Closing them produced R336 to R406, and writing them down produced R266 to R335 as well:
the code had been citing 146 rule numbers the specification did not carry, which no check
could see, because rule_coverage reads the specification and spec_check reads what the
specification names.

Two defects came out of running the two systems side by side again, and neither could have
come from this rebuild's own tests:

  * redactUrl parsed with the platform's strict URI type, which refuses a host holding an
    underscore. The refusal took the whole redaction with it, so a url with a user in it
    reached a log with the user still in it.
  * debugRepr printed this rebuild's class names where the source prints its own, which is
    the first line of what a caller diffing the two outputs sees.

Two flaky tests were fixed and both were real: the policy update queue's awaitIdle read a
state between the consumer taking a request and starting it, and the bundle route's tests
a